# mini-CC

./: .dockerignore  .gitignore  CLAUDE_CODE_FLOW.md  Dockerfile  GUIDE.md  README.md  docker-compose.yml  docker-minicc.ps1  docker-minicc.sh  main.py  pyproject.toml  requirements.txt  test_all.py  tui_simple_test.py
src/: __init__.py  app.py  commands.py  config.py  context.py  entry.py  repl.py  terminal.py
src/agent/: __init__.py  loop.py  retry.py  tool_executor.py
src/features/: __init__.py  compact.py  cost_tracker.py  memory.py  plan.py  skills.py  skills_bundled.py  todo.py
src/llm/: __init__.py  anthropic_provider.py  openai_provider.py  provider.py
src/security/: __init__.py  permission.py
src/session/: __init__.py  logger.py  trace.py
src/tools/: __init__.py  ask_tool.py  base.py  file_tools.py  git_tools.py  registry.py  safety.py  shell_tool.py  skill_tool.py  todo_tools.py  web_tools.py
src/utils/: markdown.py
src/workspace/: __init__.py  sandbox.py
tests/integration/: test_project_workflow.py
