[project]
name = "mini-claude-code"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = ["anthropic>=0.60", "openai>=1.0", "colorama>=0.4", "python-dotenv>=1.0"]

[project.scripts]
minicc = "src.entry:main"

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.packages.find]
where = ["src"]
